--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>TestCases.LogoutTest.verifyUserLogout</td></tr>
+<tr><td>TestCases.LoginPageTest.verifySignUpLoginLink</td></tr>
+<tr><td>TestCases.LoginPageTest.verifyLoginButton</td></tr>
+<tr><td>TestCases.LoginPageTest.verifyLogin</td></tr>
 </table>
