--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,20 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestCases.LogoutTest</td>
+<td>TestCases.SignUpPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUserLogout</td>
-<td>logout </td>
+<td>verifySignUp</td>
+<td>signup </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyButtonPresent</td>
+<td>signup </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
