--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>logout</td><td>LogoutTest.verifyUserLogout()[pri:1, instance:TestCases.LogoutTest@6989da5e]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>signup</td><td>SignUpPageTest.verifySignUp()[pri:2, instance:TestCases.SignUpPageTest@1623b78d]<br/>SignUpPageTest.verifyButtonPresent()[pri:1, instance:TestCases.SignUpPageTest@1623b78d]<br/></td></tr>
 </table>
