--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="797aa6">  <td>24/05/02 15:23:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LogoutTest.setUp()[pri:0, instance:TestCases.LogoutTest@6989da5e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1778629809</td>   <td></td> </tr>
-<tr bgcolor="797aa6">  <td>24/05/02 15:24:10</td>   <td>19805</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LogoutTest.tearDown()[pri:0, instance:TestCases.LogoutTest@6989da5e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1778629809</td>   <td></td> </tr>
-<tr bgcolor="797aa6">  <td>24/05/02 15:23:54</td>   <td>3738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogoutTest.verifyUserLogout()[pri:1, instance:TestCases.LogoutTest@6989da5e]">verifyUserLogout</td> 
-  <td>main@1778629809</td>   <td></td> </tr>
+<tr bgcolor="8ba8c8">  <td>24/05/02 18:03:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpPageTest.setUp()[pri:0, instance:TestCases.SignUpPageTest@1623b78d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@606508809</td>   <td></td> </tr>
+<tr bgcolor="8ba8c8">  <td>24/05/02 18:03:37</td>   <td>62</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignUpPageTest.tearDown()[pri:0, instance:TestCases.SignUpPageTest@1623b78d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="8ba8c8">  <td>24/05/02 18:03:37</td>   <td>42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpPageTest.verifyButtonPresent()[pri:1, instance:TestCases.SignUpPageTest@1623b78d]">verifyButtonPresent</td> 
+  <td>main@606508809</td>   <td></td> </tr>
+<tr bgcolor="8ba8c8">  <td>24/05/02 18:03:37</td>   <td>56</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpPageTest.verifySignUp()[pri:2, instance:TestCases.SignUpPageTest@1623b78d]">verifySignUp</td> 
+  <td>main@606508809</td>   <td></td> </tr>
 </table>
