--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,28 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a698b5">  <td>24/05/02 14:03:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignUpPageTest.closeBrowser()[pri:0, instance:TestCases.SignUpPageTest@328cf0e1]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="797aa6">  <td>24/05/02 14:03:36</td>   <td>-470</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.closeBrowser()[pri:0, instance:TestCases.LoginPageTest@7c209437]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1977618945</td>   <td></td> </tr>
-<tr bgcolor="6be97c">  <td>24/05/02 14:03:36</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LogoutTest.closeBrowser()[pri:0, instance:TestCases.LogoutTest@2fc0cc3]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="797aa6">  <td>24/05/02 14:03:21</td>   <td>-14836</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.openURL()[pri:0, instance:TestCases.LoginPageTest@7c209437]">&gt;&gt;openURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1977618945</td>   <td></td> </tr>
-<tr bgcolor="6be97c">  <td>24/05/02 14:03:36</td>   <td>-33</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LogoutTest.openURL()[pri:0, instance:TestCases.LogoutTest@2fc0cc3]">&gt;&gt;openURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1977618945</td>   <td></td> </tr>
-<tr bgcolor="a698b5">  <td>24/05/02 14:03:36</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpPageTest.openURL()[pri:0, instance:TestCases.SignUpPageTest@328cf0e1]">&gt;&gt;openURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1977618945</td>   <td></td> </tr>
-<tr bgcolor="a698b5">  <td>24/05/02 14:03:36</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpPageTest.verifyButtonPresent()[pri:1, instance:TestCases.SignUpPageTest@328cf0e1]">verifyButtonPresent</td> 
-  <td>main@1977618945</td>   <td></td> </tr>
-<tr bgcolor="797aa6">  <td>24/05/02 14:03:30</td>   <td>-5887</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLogin()[pri:3, instance:TestCases.LoginPageTest@7c209437]">verifyLogin</td> 
-  <td>main@1977618945</td>   <td></td> </tr>
-<tr bgcolor="797aa6">  <td>24/05/02 14:03:25</td>   <td>-11040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginButton()[pri:2, instance:TestCases.LoginPageTest@7c209437]">verifyLoginButton</td> 
-  <td>main@1977618945</td>   <td></td> </tr>
-<tr bgcolor="a698b5">  <td>24/05/02 14:03:36</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpPageTest.verifySignUp()[pri:2, instance:TestCases.SignUpPageTest@328cf0e1]">verifySignUp</td> 
-  <td>main@1977618945</td>   <td></td> </tr>
-<tr bgcolor="797aa6">  <td>24/05/02 14:03:22</td>   <td>-14111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpLoginLink()[pri:1, instance:TestCases.LoginPageTest@7c209437]">verifySignUpLoginLink</td> 
-  <td>main@1977618945</td>   <td></td> </tr>
-<tr bgcolor="6be97c">  <td>24/05/02 14:03:36</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogoutTest.verifyUserLogout()[pri:1, instance:TestCases.LogoutTest@2fc0cc3]">verifyUserLogout</td> 
-  <td>main@1977618945</td>   <td></td> </tr>
+<tr bgcolor="e3cb8e">  <td>24/05/02 19:29:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpPageTest.verifyButtonPresent()[pri:1, instance:TestCases.SignUpPageTest@77a98a6a]">verifyButtonPresent</td> 
+  <td>main@24039137</td>   <td></td> </tr>
+<tr bgcolor="e3cb8e">  <td>24/05/02 19:29:37</td>   <td>3885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpPageTest.verifySignUp()[pri:2, instance:TestCases.SignUpPageTest@77a98a6a]">verifySignUp</td> 
+  <td>main@24039137</td>   <td></td> </tr>
 </table>
